# PyPNM

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  TODO.md  clean.sh  docker-compose.yml  install.sh  install_py_path.sh  mkdocs.yml  output.json  pyproject.toml  qam-lut.py  requirements.txt  setup.cfg  snmp-out.txt  start-fastapi-service.sh
.github/workflows/: daily-build.yml  docs.yml  post-build.yml  publish-ghcr.yml  publish-pypi.yml  pypi-install-check.yml  pypi-release.yml  python-package.yml  release-assets.yml
backup/: md5sum.txt
config/: system.json
demo/: README.md
demo/.demo/csv/: 0050f1120360_cougar_run_1764823566_rxmer_ofdm_heat_map_193.csv  0050f1120360_cougar_run_1764823566_rxmer_ofdm_heat_map_194.csv
demo/.demo/db/: json_transactions.json  transactions.json
demo/.demo/json/: 0050f1120360_cougar_run_1764823482_193_cmdsofdmrxmer_1764823483072372700.json  0050f1120360_cougar_run_1764823482_193_cmdsofdmrxmer_1764823483401197145.json  0050f1120360_cougar_run_1764823482_193_cmdsofdmrxmer_1764823484656473958.json  (+77 more)
demo/settings/: system.json
deploy/docker/: README.md
doc/api/python/: index.md
doc/system/: system_config.md
docker/: entrypoint.sh  ping.Dockerfile
docs/: index.md
docs/api/: index.md
docs/docker/: install.md
docs/docsis/: index.md
docs/examples/: cli-pnm-fastapi.md  endpoint-fetcher.md  index.md
docs/issues/: index.md  reporting-issues.md
docs/kubernetes/: commands.md  kind-freelens.md  kind-install.md  multi-cluster-kind.md  pypnm-deploy.md  quickstart.md  scale-replicas-kind.md  ten-instances-kind.md
docs/release/: release-strategy.md
docs/system/: file-transfer-methods.md  generate-ssl-certificates.md  index.md  menu.md  pypnm-cli.md  system-config.md
docs/tests/: index.md  pycycle.md  pypnm-software-qa.md  pytest.md
docs/tools/: aliases.md  index.md  pnm-file-macaddress-updater.md  pypnm-clean.md  pypnm-mib-compiler.md
docs/topology/: index.md
documentation/: master-index.md
documentation/examples/: endpoint-fetcher.md  index.md
documentation/system/: file-transfer-methods.md  generate-ssl-certificates.md  network-topology.md  pypnm-data-base.md  system_config.md
documentation/tools/: pypnm-mib-compiler.md
examples/config/: system.json
examples/fast-api/: api-docs-dev-eventlog.py  api-docs-if31-ds-ofdm-channel-stats.py  api-system-sysdescr.py
examples/pnm/: cm-pnm-ds-chan-estimation.py  cm-pnm-ds-histogram.py  cm-pnm-ds-ofdm-fec-summary.py  cm-pnm-ds-ofdm-mod-profile.py  cm-pnm-ds-ofdm-rxmer.py  cm-pnm-spectrum-analyzer.py
examples/service/: cm-service-set-ds-chan-est.py  cm-service-set-ds-const-display.py  cm-service-set-ds-fec-summary.py  cm-service-set-ds-histogram.py  cm-service-set-ds-mod-prof.py  cm-service-set-ds-rxmer.py
examples/snmp/: cm-get-DocsDevEventEntry.py  cm-get-DocsIf31CmDsOfdmChanEntry.py  cm-get-DocsIf31CmDsOfdmProfileStatsEntry.py  cm-get-DocsIf31CmSystemCfgState.py  cm-get-docsIf3CmStatusUsEqData.py  cm-get-ds-DocsIf31CmUsOfdmaChanEntry.py  cm-get-snmp-walk.py  cm-get-sysDescr.py  cm-get-sysUpTime.py
logs/: DsHistogramRouter-1756740870.dict  DsHistogramRouter-1756741092.dict  error.json
mibs/: .index  DOCS-IF3-MIB_I22-131120.txt  DOCS-IF31-MIB.mib  DOCS-PNM-MIB.txt  NSG9000.mib  bcs_acp-061003.mib  thomson-broadband-usb.mib  thomson-broadband.mib
scripts/: clean.sh  init_secrets_key.sh  install-pypnm-docker-container.sh  install_aliases.sh  setup-and-test.sh  start-fastapi-service.sh  update_env.sh
site/: 404.html  index.html
site/examples/: index.html
site/search/: search_index.json
site/tests/: index.html
src/api/: main.py
src/config/: log_config.py
src/docsis/: cable_modem.py
src/pypnm/: __init__.py  cli.py  version.py
src/snmp/: snmp_compile_mibs.py  snmp_compiled_oids.py  snmp_v2c.py
test/: fixed-point-decoder-unittest.py
tests/: _test_pnm_header.py  test_archive_manager.py  test_chan_estimation_report_dbfit_paths.py  test_channel_power.py  test_complex_array_ops.py  test_complex_collector.py  test_csv_manager.py  test_db_linear_converter.py  test_dictutils_models_to_nested_dict.py  test_docs_pnm_chan_est_entry_casts.py  test_docs_pnm_rxmer_entry_casts.py  test_echo_detector.py  test_echo_detector_five_echoes.py  test_encrypt_system_config_secrets.py  test_file_processor.py  test_file_processor_hexdump.py  test_fixed_point_decoder.py  test_format.py  test_ftp_connector.py  test_group_delay.py  test_group_delay_calculator.py  test_inet_utils.py  test_json_transaction_db.py  test_linear_regression_1d.py  test_mac_address.py  test_magnitude_metrics.py  test_matplot_png_manager.py  test_min_avg_max.py  test_moving_average.py  test_moving_average_reflect_same.py  test_ofdm_group_delay.py  test_ping.py  test_pnm_channel_estimation_parse.py  test_pnm_constellation_parse.py  test_pnm_factory_fetcher.py  test_pnm_fec_summary_parse.py  test_pnm_file_hexdump.py  test_pnm_file_type_mapper.py  test_pnm_header.py  test_pnm_header_each_file.py  (+17 more)
tools/: add-required-python-headers.py  add-spdx.py  api-makedir-touch.sh  bump_version.py  clean.sh  docs_oids.py  encrypt-system-config-secrets.py  factory-reset.py  gen_requirements.py  generate-qam-lut-dict.py  generate-requirements.py  generate_requirements.py  log-level-rewriter.py  pnm-demo-sanitizer.py  pnm-mac-updater.py  pnm_file_retrieval_setup.py  pypnm_mem_cli.py  pypnm_pid_info.sh  release.py  remove-init-py.sh  scan-mac-addresses.py  scan-secrets.sh  setup_scp_key.py  snmptranslate_output.txt  support_bundle_builder.py  test-runner.py  test_runner.py  testpypi_release.py  update-snmp-oid-dict.py  update_snmp_oid_dict.py
tools/k8s/: pypnm_k8s_remote_deploy.sh
tools/local/: local_container_build.sh  local_kubernetes_smoke.sh
tools/maintenance/: add-required-python-headers.py
tools/pnm/: setup_scp_key.py
tools/release/: check_version.py  release.py
tools/security/: scan-mac-addresses.py
tools/support/: bump_version.py
tools/system_config/: common.py  fastapi_request_default.py  logging_config.py  menu.py  pnm_bulk_data_transfer.py  pnm_file_retrieval.py  snmp.py  testmode.py
(+646 files in other folders)
