[metadata]
name = pypnm
version = 1.0.0
author = Maurice Garcia
description = Proactive Network Maintenance API for DOCSIS devices
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/mgarcia01752/PyPNM
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    fastapi
    uvicorn[standard]
    pysnmp==7.1.17
    pydantic
    numpy
    scikit-learn
    aiofiles
    python-dotenv

[options.entry_points]
console_scripts =
    pypnm = pypnm.cli:main
